--- a/css/clients/content.css
+++ b/css/clients/content.css
@@ -1,9 +1,11 @@
 .clients-content-right-logos{
-    background-color: #d8d8d8;
+    background-color: #ffffff;
     color: black;
     padding: 25px;
     margin: 10px 10px;
+    box-shadow: inset 0 0 50px 0 rgba(0, 0, 0, 0.75);
 }
+
 
 .clients-content-right-logos h5 .icon-bg{
     background-color: #333232;
